name:                array-fs
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Ömer Sinan Ağacan
maintainer:          omer@well-typed.com
-- copyright:
category:            data-structures
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.Array.FS
  -- other-modules:
  -- other-extensions:
  build-depends:
    array,
    base >=4.11 && <4.12,
    binary,
    bytestring,
    hashable,
    lrucaching,
    resource-pool

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
