name:                array-fs
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Ömer Sinan Ağacan
maintainer:          omer@well-typed.com
-- copyright:
category:            data-structures
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.Array.FS
  -- other-modules:
  -- other-extensions:
  build-depends:
    array,
    base >=4.11 && <4.12,
    binary,
    bytestring,
    hashable,
    lrucaching,
    resource-pool

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  ghc-prof-options:    -fprof-auto

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test

  -- resourcet-1.2 uses UnliftIO instead of MonadBaseControl so can't be used
  -- with hedgehog. Hedgehog PR #220.
  build-depends:
    array,
    array-fs,
    base,
    binary,
    hedgehog,
    HUnit,
    resourcet < 1.2,
    tasty,
    tasty-hedgehog,
    tasty-hunit,
    temporary-resourcet
  ghc-options: -Wall -O2
  ghc-prof-options: -with-rtsopts=-xc
